<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/mainLayout"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/black" xmlns:android="http://schemas.android.com/apk/res/android">
	<TableLayout android:id="@+id/tblLayout1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@drawable/green" xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true">
		<TableRow android:id="@+id/widget36" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/black"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/groupMap" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/groupMap_text"
				android:textStyle="bold" android:textColor="@drawable/white">
			</TextView>
		</TableRow>
		<TableRow android:id="@+id/widget37" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/green"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/lblLargeMap"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/lblLargeMap_text">
			</TextView>
			<CheckBox android:id="@+id/cbxLargeMap"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
			</CheckBox>
		</TableRow>
		<TableRow android:id="@+id/widget38" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/green"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/lblNumUnits"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/lblNumUnits_text">
			</TextView>
			<EditText android:id="@+id/tbxNumUnits"
				android:layout_width="30px" android:layout_height="wrap_content"
				android:padding="3dip" android:text="@string/tbxNumUnits_text"
				android:numeric="integer" android:scrollHorizontally="true">
			</EditText>
		</TableRow>

	</TableLayout>
	<TableLayout android:id="@+id/tblLayout2"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@drawable/green" xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_below="@+id/tblLayout1"
		android:layout_alignParentLeft="true">
		<TableRow android:id="@+id/widget48" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/black"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/groupPlayer"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/groupPlayer_text" android:textStyle="bold"
				android:textColor="@drawable/white">
			</TextView>
		</TableRow>
		<TableRow android:id="@+id/widget49" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/green"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/lblArmy" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/lblArmy_text">
			</TextView>
			<Spinner android:id="@+id/spinnArmy" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:drawSelectorOnTop="true">
			</Spinner>
		</TableRow>
		<TableRow android:id="@+id/widget50" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/green"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/lblColor" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/lblColor_text">
			</TextView>
			<Spinner android:id="@+id/spinnColor" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:drawSelectorOnTop="true">
			</Spinner>
		</TableRow>
		<TableRow android:id="@+id/widget51" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/green"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/lblName" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/lblName_text">
			</TextView>
			<EditText android:id="@+id/tbxName" android:layout_width="70px"
				android:layout_height="wrap_content" android:padding="3dip"
				android:text="@string/tbxName_text" android:scrollHorizontally="true">
			</EditText>
		</TableRow>
	</TableLayout>
	<TableLayout android:id="@+id/tblLayout3"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@drawable/green" xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_below="@+id/tblLayout2"
		android:layout_alignParentLeft="true">
		<TableRow android:id="@+id/widget61" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/black"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/groupNetwork"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/groupNetwork_text" android:textStyle="bold"
				android:textColor="@drawable/white">
			</TextView>
		</TableRow>
		<TableRow android:id="@+id/widget62" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/green"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal">
			<TextView android:id="@+id/lblServer" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/lblServer_text">
			</TextView>
			<EditText android:id="@+id/tbxServer" android:layout_width="70px"
				android:layout_height="fill_parent" android:padding="3dip"
				android:text="@string/tbxServer_text" android:scrollHorizontally="true">
			</EditText>
		</TableRow>
	</TableLayout>
	<Button android:id="@+id/btnJoinGame" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/btnJoinGame_text"
		android:textStyle="bold" android:layout_below="@+id/tblLayout3"
		android:layout_centerHorizontal="true">
	</Button>
</RelativeLayout>
